fixed nav dropdown overflowing on some screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1346,6 +1346,7 @@ h5 {
 
   .navbar {
     top: 100px;
+    width: 100%;
   }
 
   .nav-menu {
